--- a/subContainer.css
+++ b/subContainer.css
@@ -1,6 +1,8 @@
 .subContainer{
     height: 100%;
     width: 80%;
-    background-color: rgba(100, 148, 237, 0.568);
+    background-color: rgba(47, 79, 79, 0.534);
+    display: grid;
+    grid-template-columns: 1fr 4fr;
     
 }
