--- a/mainContainer.css
+++ b/mainContainer.css
@@ -1,7 +1,10 @@
+body {
+    margin: 0;
+}
+
 .mainContainer {
     width: 100vw;
     height: 100vh;
-    margin: 0;
     display: grid;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 3fr 0.5fr;
 }
