--- a/contentContainer.css
+++ b/contentContainer.css
@@ -2,5 +2,9 @@
     width:100%;
     height: 100%;
     background-color: blueviolet;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+    overflow-y: scroll;
 }
