--- a/mainContainer.css
+++ b/mainContainer.css
@@ -6,5 +6,5 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 1fr 3fr 0.5fr;
+    grid-template-rows: 20% 60% 20%;
 }
